chore: document more endpoints
